Implemented login, jwt token generation